# octopus-aiida-plugin

./: Dockerfile  README.md  pyproject.toml
dockerfiles/: Dockerfile
job/: launch.py
src/octopus_aiida/: calculations.py  parsers.py
